调试数据库格式指定为/Zi, 目前可以单步调试了!!

--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -4,7 +4,7 @@ SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
 SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Cmake)
 SET(CMAKE_USE_RELATIVE_PATHS ON)
 IF(NOT CMAKE_BUILD_TYPE)
-	SET(CMAKE_BUILD_TYPE Debug)
+	SET(CMAKE_BUILD_TYPE "Debug")
 ENDIF()
 
 PROJECT(Cpp)
@@ -53,14 +53,14 @@ ENDIF()
 MESSAGE(STATUS "${ThirdPartyLibs}")
 
 IF(MSVC)
-	SET(CMAKE_CXX_FLAGS_DEBUG "/MTd")
+	SET(CMAKE_CXX_FLAGS_DEBUG "/MTd /Zi")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libc.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libcmt.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:msvcrt.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libcd.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:msvcrtd.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:msvcprtd.lib")
-	ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB -DBOOST_PYTHON_STATIC_LIB -DWIN64)
+	ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB)
 ENDIF()
 
 ADD_SUBDIRECTORY(Platform)
