去除所有警告,并把警告当成错误

--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -53,7 +53,7 @@ ENDIF()
 MESSAGE(STATUS "${ThirdPartyLibs}")
 
 IF(MSVC)
-	SET(CMAKE_CXX_FLAGS_DEBUG "/MTd /Zi")
+	SET(CMAKE_CXX_FLAGS_DEBUG "/MTd /Zi /WX /wd4244 /wd4267 /wd4018 /wd4355 /wd4800 /wd4251 /wd4996 /wd4146 /wd4305 /wd4819")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libc.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libcmt.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:msvcrt.lib")
