加上 -D_WIN32_WINNT=0x0501 否则boost库会警告

--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -60,7 +60,7 @@ IF(MSVC)
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libcd.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:msvcrtd.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:msvcprtd.lib")
-	ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB)
+	ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB -D_WIN32_WINNT=0x0501)
 ENDIF()
 
 ADD_SUBDIRECTORY(Platform)
