准备嵌入mono,用csharp作为脚本

--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -23,6 +23,9 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/Game)
 INCLUDE_DIRECTORIES(ThirdParty)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/ThirdParty)
 
+FIND_PACKAGE(GLog REQUIRED)
+INCLUDE_DIRECTORIES(${GLOG_INCLUDE_DIR})
+
 FIND_PACKAGE(Protobuf REQUIRED)
 INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
 LINK_DIRECTORIES(${PROTOBUF_LIBRARY_DIR})
@@ -41,6 +44,7 @@ LINK_DIRECTORIES(${Boost_LIBRARY_DIR})
 SET(ThirdPartyLibs
 	gtest
 	gmock
+	${GLOG_LIBRARIES}
 	${PROTOBUF_LIBRARIES}
 	${Boost_LIBRARIES}
 	${PERFTOOLS_DEBUG_LIBRARIES}
