glog gflags集成，目前windows版可以编译通过了！！

--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -26,6 +26,9 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/ThirdParty)
 FIND_PACKAGE(GLog REQUIRED)
 INCLUDE_DIRECTORIES(${GLOG_INCLUDE_DIR})
 
+FIND_PACKAGE(GFlags REQUIRED)
+INCLUDE_DIRECTORIES(${GFLAGS_INCLUDE_DIR})
+
 FIND_PACKAGE(Protobuf REQUIRED)
 INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
 LINK_DIRECTORIES(${PROTOBUF_LIBRARY_DIR})
@@ -47,6 +50,7 @@ SET(ThirdPartyLibs
 	gtest
 	gmock
 	${GLOG_LIBRARIES}
+	${GFLAGS_LIBRARIES}
 	${PROTOBUF_LIBRARIES}
 	${Boost_LIBRARIES}
 	${PERFTOOLS_DEBUG_LIBRARIES}
@@ -64,7 +68,7 @@ IF(MSVC)
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libcd.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:msvcrtd.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:msvcprtd.lib")
-	ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB -D_WIN32_WINNT=0x0601)
+	ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB -D_WIN32_WINNT=0x0601 -DGLOG_NO_ABBREVIATED_SEVERITIES -DGOOGLE_GLOG_DLL_DECL=)
 ENDIF()
 
 ADD_SUBDIRECTORY(Platform)
