FindMono.cmake 更加完善了 windows和linux 均OK

--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -24,27 +24,26 @@ INCLUDE_DIRECTORIES(ThirdParty)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/ThirdParty)
 
 FIND_PACKAGE(GLog REQUIRED)
-INCLUDE_DIRECTORIES(${GLOG_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${GLOG_INCLUDE_DIRS})
 
 FIND_PACKAGE(GFlags REQUIRED)
-INCLUDE_DIRECTORIES(${GFLAGS_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${GFLAGS_INCLUDE_DIRS})
 
 FIND_PACKAGE(Protobuf REQUIRED)
-INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
-LINK_DIRECTORIES(${PROTOBUF_LIBRARY_DIR})
+INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIRS})
 
 FIND_PACKAGE(Perftools REQUIRED)
-INCLUDE_DIRECTORIES(${PERFTOOLS_INCLUDE_DIR})
-LINK_DIRECTORIES(${PERFTOOLS_LIBRARY_DIR})
+INCLUDE_DIRECTORIES(${PERFTOOLS_INCLUDE_DIRS})
+
+FIND_PACKAGE(Mono REQUIRED)
 
 FIND_PACKAGE(Boost REQUIRED thread system)
 SET(Boost_USE_STATIC_LIBS    ON)
 SET(Boost_USE_MULTITHREADED  ON)
 SET(Boost_USE_STATIC_RUNTIME OFF)
-INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIR})
-LINK_DIRECTORIES(${Boost_LIBRARY_DIR})
 
-FIND_PACKAGE(Mono REQUIRED)
+GET_PROPERTY(IncludeDirs DIRECTORY PROPERTY INCLUDE_DIRECTORIES)
+MESSAGE("IncludeDirs: ${IncludeDirs}")
 
 SET(ThirdPartyLibs
 	gtest
