--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -23,12 +23,6 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/Game)
 INCLUDE_DIRECTORIES(ThirdParty)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/ThirdParty)
 
-FIND_PACKAGE(GLog REQUIRED)
-INCLUDE_DIRECTORIES(${GLOG_INCLUDE_DIRS})
-
-FIND_PACKAGE(GFlags REQUIRED)
-INCLUDE_DIRECTORIES(${GFLAGS_INCLUDE_DIRS})
-
 FIND_PACKAGE(Protobuf REQUIRED)
 INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIRS})
 
@@ -45,8 +39,6 @@ SET(Boost_USE_STATIC_RUNTIME OFF)
 SET(ThirdPartyLibs
 	gtest
 	gmock
-	${GLOG_LIBRARIES}
-	${GFLAGS_LIBRARIES}
 	${PROTOBUF_LIBRARIES}
 	${Boost_LIBRARIES}
 	${PERFTOOLS_DEBUG_LIBRARIES}
@@ -64,7 +56,7 @@ IF(MSVC)
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libcd.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:msvcrtd.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:msvcprtd.lib")
-	ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB -D_WIN32_WINNT=0x0601 -DGLOG_NO_ABBREVIATED_SEVERITIES -DGOOGLE_GLOG_DLL_DECL=)
+	ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB -D_WIN32_WINNT=0x0601)
 ENDIF()
 
 ADD_SUBDIRECTORY(Platform)
