--- a/Cpp/Platform/Orm/CMakeLists.txt
+++ b/Cpp/Platform/Orm/CMakeLists.txt
@@ -1,7 +1,13 @@
+PROTOBUF_GENERATE_CPP(ProtoSrcs ProtoHdrs 
+	Person.proto
+)
+
 FILE(GLOB Header "*.h")
 
 SET(OrmSrc 
 	${Header}
+	${ProtoHdrs}
+	${ProtoSrcs}
 	Column.cc
 	DbHelper.cc
 	DbResult.cc
@@ -10,3 +16,19 @@ SET(OrmSrc
 )
 
 ADD_LIBRARY(Orm ${OrmSrc})
+SET_PROPERTY(TARGET Orm PROPERTY FOLDER "Platform")
+
+ADD_EXECUTABLE(SelectTest SelectTest.cc)
+
+SET(Tests
+	SelectTest
+)
+
+FOREACH(Test ${Tests})
+	TARGET_LINK_LIBRARIES(${Test}
+		Orm
+		${ThirdPartyLibs}
+	)
+	ADD_TEST(${Test} ${Test})
+	SET_PROPERTY(TARGET ${Test} PROPERTY FOLDER "Tests/Platform/Orm")
+ENDFOREACH()
