--- a/Cpp/Platform/Orm/CMakeLists.txt
+++ b/Cpp/Platform/Orm/CMakeLists.txt
@@ -21,11 +21,13 @@ SET_PROPERTY(TARGET Orm PROPERTY FOLDER "Platform")
 ADD_EXECUTABLE(SelectTest SelectTest.cc)
 ADD_EXECUTABLE(MessageFieldTest MessageFieldTest.cc)
 ADD_EXECUTABLE(ColumnTest ColumnTest.cc)
+ADD_EXECUTABLE(ExprTest ExprTest.cc)
 
 SET(Tests
 	SelectTest
 	MessageFieldTest
 	ColumnTest
+	ExprTest
 )
 
 FOREACH(Test ${Tests})
