增加DbResultTest,演示该Orm的用法

--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -29,6 +29,9 @@ INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIRS})
 FIND_PACKAGE(Perftools REQUIRED)
 INCLUDE_DIRECTORIES(${PERFTOOLS_INCLUDE_DIRS})
 
+FIND_PACKAGE(MysqlConnector REQUIRED)
+INCLUDE_DIRECTORIES(${MYSQL_CONNECTOR_INCLUDE_DIRS})
+
 FIND_PACKAGE(Mono REQUIRED)
 
 FIND_PACKAGE(Boost REQUIRED thread system)
@@ -43,6 +46,7 @@ SET(ThirdPartyLibs
 	gmock
 	${PROTOBUF_LIBRARIES}
 	${Boost_LIBRARIES}
+	${MYSQL_CONNECTOR_LIBRARIES}
 	${PERFTOOLS_DEBUG_LIBRARIES}
 )
 
