boost log封装一下，可以打印文件名和行号

--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -34,7 +34,7 @@ INCLUDE_DIRECTORIES(${MYSQL_CONNECTOR_INCLUDE_DIRS})
 
 FIND_PACKAGE(Mono REQUIRED)
 
-FIND_PACKAGE(Boost REQUIRED thread system)
+FIND_PACKAGE(Boost REQUIRED thread system log filesystem)
 SET(Boost_USE_STATIC_LIBS    ON)
 SET(Boost_USE_MULTITHREADED  ON)
 SET(Boost_USE_STATIC_RUNTIME OFF)
