gtest glog在linux下需要pthread库

--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -16,6 +16,7 @@ IF(TESTS)
 	ENABLE_TESTING()
 ENDIF()
 
+# 设置头文件查找路径
 INCLUDE_DIRECTORIES(Platform)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/Platform)
 INCLUDE_DIRECTORIES(Game)
@@ -23,6 +24,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/Game)
 INCLUDE_DIRECTORIES(ThirdParty)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/ThirdParty)
 
+# 检查库
 FIND_PACKAGE(Protobuf REQUIRED)
 INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIRS})
 
@@ -39,6 +41,7 @@ SET(Boost_USE_STATIC_LIBS    ON)
 SET(Boost_USE_MULTITHREADED  ON)
 SET(Boost_USE_STATIC_RUNTIME OFF)
 
+# 设置第三方库
 SET(ThirdPartyLibs
 	glog
 	gflags
@@ -49,11 +52,15 @@ SET(ThirdPartyLibs
 	${MYSQL_CONNECTOR_LIBRARIES}
 	${PERFTOOLS_DEBUG_LIBRARIES}
 )
+IF(UNIX)
+	SET(ThirdPartyLibs ${ThirdPartyLibs} pthread)
+ENDIF()
 
 IF(PROFILE)
 	SET(ThirdPartyLibs ${ThirdPartyLibs} ${PERFTOOLS_PROFILE_LIBRARIES})
 ENDIF()
 
+# 设置编译选项
 IF(WIN32)
 	SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd /Zi /WX /wd4244 /wd4267 /wd4018 /wd4355 /wd4800 /wd4251 /wd4996 /wd4146 /wd4305 /wd4819")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libc.lib")
@@ -67,6 +74,7 @@ ELSEIF(UNIX)
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 ENDIF()
 
+# 子目录
 ADD_SUBDIRECTORY(Platform)
 ADD_SUBDIRECTORY(Game)
 ADD_SUBDIRECTORY(ThirdParty)
