tcmalloc库和profile都作为可选库，需要的时候cmake ../Cpp -DTCMALLOC=ON即可开启

--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -11,6 +11,7 @@ PROJECT(Cpp)
 
 OPTION(TESTS "Decide if the test suite shall be built or not" ON)
 OPTION(PROFILE "Use Google Perftool Profile" OFF)
+OPTION(TCMALLOC "Use Google Perftool Tcmalloc" OFF)
 
 IF(TESTS)
 	ENABLE_TESTING()
@@ -50,10 +51,13 @@ SET(ThirdPartyLibs
 	${PROTOBUF_LIBRARIES}
 	${Boost_LIBRARIES}
 	${MYSQL_CONNECTOR_LIBRARIES}
-	${PERFTOOLS_DEBUG_LIBRARIES}
 )
 IF(UNIX)
 	SET(ThirdPartyLibs ${ThirdPartyLibs} pthread)
+ENDIF()
+
+IF(TCMALLOC)
+	SET(ThirdPartyLibs ${ThirdPartyLibs} ${PERFTOOLS_DEBUG_LIBRARIES})
 ENDIF()
 
 IF(PROFILE)
@@ -62,7 +66,7 @@ ENDIF()
 
 # 设置编译选项
 IF(WIN32)
-	SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd /Zi /WX /wd4244 /wd4267 /wd4018 /wd4355 /wd4800 /wd4251 /wd4996 /wd4146 /wd4305 /wd4819")
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MTd /Zi /WX /wd4244 /wd4267 /wd4018 /wd4355 /wd4800 /wd4251 /wd4996 /wd4146 /wd4305 /wd4819")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libc.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libcmt.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:msvcrt.lib")
