1.boost::bind boost::function boost::shared_ptr 等boost库使用C++ 11标准库替代 2.boost.log, mono, mysql connector三个库成为可选库，如果不安装则不编译需要该库的模块， 比如缺少mysql connector就不编译orm

--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -32,12 +32,13 @@ INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIRS})
 FIND_PACKAGE(Perftools REQUIRED)
 INCLUDE_DIRECTORIES(${PERFTOOLS_INCLUDE_DIRS})
 
-FIND_PACKAGE(MysqlConnector REQUIRED)
+FIND_PACKAGE(MysqlConnector)
 INCLUDE_DIRECTORIES(${MYSQL_CONNECTOR_INCLUDE_DIRS})
 
-FIND_PACKAGE(Mono REQUIRED)
+FIND_PACKAGE(Mono)
 
-FIND_PACKAGE(Boost REQUIRED thread system log filesystem)
+FIND_PACKAGE(Boost COMPONENTS log)
+FIND_PACKAGE(Boost REQUIRED thread system filesystem)
 SET(Boost_USE_STATIC_LIBS    ON)
 SET(Boost_USE_MULTITHREADED  ON)
 SET(Boost_USE_STATIC_RUNTIME OFF)
