1.boost::bind boost::function boost::shared_ptr 等boost库使用C++ 11标准库替代 2.缺少某些第三方库就不进行相应模块的编译，比如缺少mysql connector就不编译orm

--- a/Cpp/Platform/CMakeLists.txt
+++ b/Cpp/Platform/CMakeLists.txt
@@ -1,5 +1,14 @@
 ADD_SUBDIRECTORY(Thread)
 ADD_SUBDIRECTORY(Rpc)
-ADD_SUBDIRECTORY(Mono)
-ADD_SUBDIRECTORY(Orm)
-ADD_SUBDIRECTORY(Log)
+
+IF(MONO_FOUND)
+	ADD_SUBDIRECTORY(Mono)
+ENDIF()
+
+IF(MYSQL_CONNECTOR_FOUND)
+	ADD_SUBDIRECTORY(Orm)
+ENDIF()
+
+IF(Boost_Log_FOUND)
+	ADD_SUBDIRECTORY(Log)
+ENDIF()
