增加一个git lg命令配置,命令行下可以显示漂亮的git log

--- a/Config/.gitconfig
+++ b/Config/.gitconfig
@@ -3,6 +3,7 @@
     br = branch
     ci = commit
     st = status
+    lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --
 
 [color]
     ui = true
