--- a/CSharp/Editor/Packages.config
+++ b/CSharp/Editor/Packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-	<package id="CommonServiceLocator" version="1.0" />
-	<package id="Prism" version="4.1.0.0" />
-	<package id="Prism.MEFExtensions" version="4.1.0.0" />
+	<package id="CommonServiceLocator" version="1.0" targetFramework="net40-Client" />
+	<package id="Prism" version="4.1.0.0" targetFramework="net40-Client" />
+	<package id="Prism.MEFExtensions" version="4.1.0.0" targetFramework="net40-Client" />
 </packages>
