--- a/CSharp/Platform/Infrastructure/Packages.config
+++ b/CSharp/Platform/Infrastructure/Packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-	<package id="CommonServiceLocator" version="1.0" />
-	<package id="Prism" version="4.1.0.0" />
-	<package id="Prism.MEFExtensions" version="4.1.0.0" />
+	<package id="CommonServiceLocator" version="1.0" targetFramework="net40" />
+	<package id="Prism" version="4.1.0.0" targetFramework="net40" />
 </packages>
