--- a/CSharp/App/Modules/BehaviorTree/Packages.config
+++ b/CSharp/App/Modules/BehaviorTree/Packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.0" targetFramework="net40" />
+  <package id="NLog" version="2.0.0.2000" targetFramework="net40" />
   <package id="Prism" version="4.1.0.0" targetFramework="net40" />
   <package id="Prism.MEFExtensions" version="4.1.0.0" targetFramework="net40" />
 </packages>
