--- a/CSharp/App/Editor/NLog.config
+++ b/CSharp/App/Editor/NLog.config
@@ -2,8 +2,10 @@
 
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<targets>
-		<target name="file" xsi:type="File" fileName="${basedir}/Log.txt"
-		        layout="${longdate} ${threadid:padCharacter=0:padding=4:fixedLength=true} ${callsite:className=false:includeSourcePath=false:methodName=false:fileName=true}  ${message}" />
+		<target name="file" xsi:type="File" 
+			fileName="${basedir}/Log.txt"
+			deleteOldFileOnStartup="true"
+			layout="${longdate} ${threadid:padCharacter=0:padding=4:fixedLength=true} ${callsite:className=false:includeSourcePath=false:methodName=false:fileName=true}  ${message}" />
 	</targets>
 	<rules>
 		<logger name="*" minlevel="Trace" writeTo="file" />
