--- a/CSharp/App/Infrastructure/Infrastructure.csproj
+++ b/CSharp/App/Infrastructure/Infrastructure.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoPopulateExportedViewsBehavior.cs" />
+    <Compile Include="ENetUpdateEvent.cs" />
     <Compile Include="IViewRegionRegistration.cs" />
     <Compile Include="ViewExportAttribute.cs" />
   </ItemGroup>
