--- a/CSharp/App/Editor/NLog.config
+++ b/CSharp/App/Editor/NLog.config
@@ -5,7 +5,7 @@
 		<target name="file" xsi:type="File" 
 			fileName="${basedir}/Log.txt"
 			deleteOldFileOnStartup="true"
-			layout="${longdate} ${threadid:padCharacter=0:padding=4:fixedLength=true} ${callsite:className=false:includeSourcePath=false:methodName=false:fileName=true}  ${message}" />
+			layout="${longdate} ${threadid:padCharacter=0:padding=4:fixedLength=true} ${message}" />
 	</targets>
 	<rules>
 		<logger name="*" minlevel="Trace" writeTo="file" />
