--- a/CSharp/App/Modules/BehaviorTree/BehaviorTree.csproj
+++ b/CSharp/App/Modules/BehaviorTree/BehaviorTree.csproj
@@ -76,9 +76,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Platform\ELog\ELog.csproj">
+    <ProjectReference Include="..\..\..\Platform\Log\Log.csproj">
       <Project>{72e16572-fc1f-4a9e-bc96-035417239298}</Project>
-      <Name>ELog</Name>
+      <Name>Log</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Infrastructure\Infrastructure.csproj">
       <Project>{48a2e149-0dac-41b4-bb54-dfbccd6d42b3}</Project>
