--- a/CSharp/App/Modules/Robot/Robot.csproj
+++ b/CSharp/App/Modules/Robot/Robot.csproj
@@ -65,9 +65,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Platform\ELog\ELog.csproj">
+    <ProjectReference Include="..\..\..\Platform\Log\Log.csproj">
       <Project>{72e16572-fc1f-4a9e-bc96-035417239298}</Project>
-      <Name>ELog</Name>
+      <Name>Log</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\ThirdParty\ENetCS\ENetCS.csproj">
       <Project>{d0b4cfac-a368-4742-9863-68776cfa9938}</Project>
