--- a/CSharp/App/Modules/Robot/Packages.config
+++ b/CSharp/App/Modules/Robot/Packages.config
@@ -4,4 +4,5 @@
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="Prism" version="4.1.0.0" targetFramework="net45" />
   <package id="Prism.MEFExtensions" version="4.1.0.0" targetFramework="net45" />
+  <package id="protobuf-net" version="2.0.0.480" targetFramework="net45" />
 </packages>
